# couscous

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  channel.go  midi_in.c  midi_in.go  scp.sh  version_check.bzl
SimpleServer/: BUILD.bazel  SimpleServer.c  SimpleServer.h
alsa/: BUILD.bazel
blink/: blink.cc
couscous/: BUILD.bazel  couscous.go
examples/blink/: BUILD.bazel
examples/button/: button.cc
examples/fastled-examples/: color_palette.cc  color_temperature.cc  cylon.cc  demo_reel_100.cc  fire2012_with_palette.cc  gbc_set_demo.cc  noise.cc  noise_playground.cc  noise_plus_palette.cc  xy_matrix.cc
ios-led-controller/: AppDelegate.swift  BUILD.bazel  CollectionViewCell.swift  CollectionViewDelegateAndDataSource.swift  Info.plist  NumberCollectionViewCell.swift  NumbersCollectionViewDelegateAndDataSource.swift  README.md  ViewController.swift  profile.mobileprovision
midi/: BUILD.bazel  midi.go
neopixel/: neopixel.cc  todo
neopixel-driver/: BUILD.bazel  neopixel-driver.cc
neopixel/example/: README.md  fire2012.cc  rgb_calibrate.cc
rpi/: led_math.txt
rpi/alsa/: BUILD.bazel  alsa.go
rpi/couscous/: BUILD.bazel
rpi/midi/: BUILD.bazel  midi.go  midi_test.go
rpi/visualizer/: BUILD.bazel
rpi/ws2812b/: BUILD.bazel  ws2812b.go
scripts/: tdd  tdd-ios  tdd-neopixel  tdd-server
server/: BUILD.bazel  comm.proto  server.cc  wifi_ap.cc
visualizer/: BUILD.bazel  visualizer.go
ws2812b/: BUILD.bazel
