# load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

# go_library(
#     name = "midi",
#     srcs = [
#         "midi.go",
#     ],
#     deps = [
#         "//tools:go_default_library",
#         "@org_golang_x_utils//stuff:go_default_library",
#     ],
#     importpath = "github.com/robstein/couscous/midi",
#     visibility = ["//visibility:public"],
# )

# # Internal test
# go_test(
#     name = "midi",
#     srcs = ["midi_test.go"],
#     importpath = "github.com/robstein/couscous/midi",
# 	embed = [":go_default_library"],
# )