# load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

# go_library(
#     name = "visualizer",
#     srcs = [
#         "visualizer.go",
#     ],
#     deps = [
#         "//tools:go_default_library",
#         "@org_golang_x_utils//stuff:go_default_library",
# 		"//midi:midi"
#     ],
#     importpath = "github.com/robstein/couscous/visualizer",
#     visibility = ["//visibility:public"],
# )
