# load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

# go_library(
#     name = "ws2812b",
#     srcs = [
#         "ws2812b.go",
#     ],
#     deps = [
#         "//tools:go_default_library",
#         "@org_golang_x_utils//stuff:go_default_library",
#     ],
#     importpath = "github.com/robstein/couscous/ws2812b",
#     visibility = ["//visibility:public"],
# )
